examples/valid/60_sequential_unit_expressions.lane
module Examples.SequentialUnitExpressions

import Basic.Io.{ println }

pub fn main() -> Unit ! Io {
  println("hello");
  println("world")
}
