examples/invalid/34_effect_alias_cycle.lane
module Examples.Invalid.EffectAliasCycle

type A = { B }

type B = { A }

fn bad() -> Unit ! A {
  ()
}
